src/test/ui/binop/issue-77910-1.stderr
error[E0369]: binary operation `==` cannot be applied to type `for<'r> fn(&'r i32) -> &'r i32 {foo}`
  --> $DIR/issue-77910-1.rs:8:5
   |
LL |     assert_eq!(foo, y);
   |     ^^^^^^^^^^^^^^^^^^
   |     |
   |     for<'r> fn(&'r i32) -> &'r i32 {foo}
   |     _
   |
   = note: this error originates in the macro `assert_eq` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `for<'r> fn(&'r i32) -> &'r i32 {foo}` doesn't implement `Debug`
  --> $DIR/issue-77910-1.rs:8:5
   |
LL |     assert_eq!(foo, y);
   |     ^^^^^^^^^^^^^^^^^^ `for<'r> fn(&'r i32) -> &'r i32 {foo}` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |
   = help: the trait `Debug` is not implemented for `for<'r> fn(&'r i32) -> &'r i32 {foo}`
   = note: this error originates in the macro `assert_eq` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0277, E0369.
For more information about an error, try `rustc --explain E0277`.
